--- a/Vidracaria_Portal/Views/Aluminios/Index.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Index.cshtml
@@ -65,7 +65,7 @@
                             @Html.DisplayFor(modelItem => item.NomeAluminio)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Cor)
+                            @Html.DisplayFor(modelItem => item.Cor.NomeCor)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Marca)
