--- a/Vidracaria_Portal/Views/Ferragens/Index.cshtml
+++ b/Vidracaria_Portal/Views/Ferragens/Index.cshtml
@@ -65,7 +65,7 @@
                             @Html.DisplayFor(modelItem => item.NomeFerragem)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.CorId)
+                            @Html.DisplayFor(modelItem => item.Cor.NomeCor)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Marca)
