--- a/Vidracaria_Portal/Views/Orcamentos/Index.cshtml
+++ b/Vidracaria_Portal/Views/Orcamentos/Index.cshtml
@@ -92,7 +92,7 @@
                             @Html.DisplayFor(modelItem => item.Estado)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.TipoId)
+                            @Html.DisplayFor(modelItem => item.TipoServico.Tipo)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.DataCadastro)
