--- a/Vidracaria_Portal/Views/VidrosComuns/Index.cshtml
+++ b/Vidracaria_Portal/Views/VidrosComuns/Index.cshtml
@@ -71,13 +71,13 @@
                             @Html.DisplayFor(modelItem => item.NomeVidro)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.AdesivoId)
+                            @Html.DisplayFor(modelItem => item.Adesivo.Nome)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.PeliculaId)
+                            @Html.DisplayFor(modelItem => item.Pelicula.Nome)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.ExpessuraId)
+                            @Html.DisplayFor(modelItem => item.Expessura.Expessura)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Marca)
