--- a/Vidracaria_Portal/Views/Home/Sobre.cshtml
+++ b/Vidracaria_Portal/Views/Home/Sobre.cshtml
@@ -2,7 +2,22 @@
     Layout = "~/Views/Shared/_LayoutCliente.cshtml"; }
 
 @section Styles{
+    <link href="~/css/site.css" rel="stylesheet" />
+    <style>
+        .titulo {
+            font-weight: bold;
+            letter-spacing: 0.5px;
+            font-size: 20px;
+        }
 
+        .subtitulo {
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            font-size: 18px;
+            margin-top: 8px;
+        }
+
+    </style>
 }
 
 <section id="hero" style="background: url('../img/Banner/banner4.jpg'); height: 300px;" class="d-flex align-items-center">
@@ -32,6 +47,38 @@
     </div>
 </section>
 
+<section class="about">
+    <div class="container">
+        <div class="section-title">
+            <span>Horário de funcionamento</span>
+            <h2>Horário de funcionamento</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-12 flex-funcionamento">
+                <div class="col-md-4" style="margin-top: 12px; width: 100%;">
+                    <ul>
+                        <li class="titulo"><i style="margin-right: 8px;" class="far fa-calendar"></i>Segunda-Feira a Sexta-Feira</li>
+                        <li class="subtitulo"><i style="margin-right: 8px;" class="far fa-calendar"></i>07:30 às 11:00</li>
+                        <li class="subtitulo"><i style="margin-right: 8px;" class="far fa-calendar"></i>14:00 às 17:30</li>
+                    </ul>
+                </div>
+                <div class="col-md-4" style="margin-top: 12px; width: 100%;">
+                    <ul>
+                        <li class="titulo"><i style="margin-right: 8px;" class="far fa-calendar"></i>Sábado</li>
+                        <li class="subtitulo"><i style="margin-right: 8px;" class="far fa-calendar"></i>07:30 às 12:00</li>
+                    </ul>
+                </div>
+                <div class="col-md-4" style="margin-top: 12px; width: 100%;">
+                    <ul>
+                        <li class="titulo"><i style="margin-right: 8px;" class="far fa-calendar-times"></i>Domingo</li>
+                        <li class="subtitulo"><i style="margin-right: 8px;" class="far fa-calendar-times"></i>Fechado</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section id="team" class="team">
     <div class="container">
 
@@ -46,8 +93,8 @@
                     <h4>Rafael Martini Gigliotti</h4>
                     <span style="font-size: 16px; color: #343a40">Chefe Executivo</span>
                     <div class="social">
-                        <a href=""><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a href=""><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/rafael.gigliotti.1"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/rafaelvidracaria/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -57,8 +104,8 @@
                     <h4>Samantta Cristina Tavano</h4>
                     <span style="font-size: 16px; color: #343a40">Gerente Administrativa</span>
                     <div class="social">
-                        <a href=""><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a href=""><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/samantta.tavano"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/samanttagigliotti/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -68,8 +115,8 @@
                     <h4>Junior Silverio</h4>
                     <span style="font-size: 16px; color: #343a40">Colaborador</span>
                     <div class="social">
-                        <a href=""><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a href=""><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/juniinhuu.silveerio"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/juniorr_silverio/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -80,8 +127,8 @@
                     <h4>Gabriel Pastore</h4>
                     <span style="font-size: 16px; color: #343a40">Colaborador</span>
                     <div class="social">
-                        <a href=""><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a href=""><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100007930717601"><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/gabrielpastore1074/"><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -91,8 +138,7 @@
                     <h4>Antônio</h4>
                     <span style="font-size: 16px; color: #343a40">Colaborador</span>
                     <div class="social">
-                        <a href=""><i style="font-size: 25px;" class="fab fa-facebook"></i></a>
-                        <a href=""><i style="font-size: 25px;" class="fab fa-instagram"></i></a>
+
                     </div>
                 </div>
             </div>
