--- a/Vidracaria_Portal/wwwroot/css/site.css
+++ b/Vidracaria_Portal/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+.flex-funcionamento {
+    display: flex;
+}
+
+@media (max-width: 780px){
+
+    .flex-funcionamento {
+        display: flex;
+        flex-direction: column;
+    }
+}
