Serviço de e-mail finalizado (Falta apenas um ajuste no retorno)

--- a/Vidracaria_Portal/Views/Clientes/Index.cshtml
+++ b/Vidracaria_Portal/Views/Clientes/Index.cshtml
@@ -59,7 +59,7 @@
                     <th>
                         Data Cadastro
                     </th>
-                    <th></th>
+                    <th>Operações</th>
                 </tr>
             </thead>
             <tbody>
