--- a/Vidracaria_Portal/Views/Aluminios/Index.cshtml
+++ b/Vidracaria_Portal/Views/Aluminios/Index.cshtml
@@ -6,6 +6,19 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
+@section Style{
+    <style>
+        .wrap {
+            text-overflow: ellipsis;
+            /* Required for text-overflow to do anything */
+            white-space: nowrap;
+            overflow: hidden;
+            width: 100px;
+            max-width: 100px;
+        }
+    </style>
+}
+
 <div class="content">
     <div class="row" style="margin-bottom: 15px; padding-left: 5px;">
         <div class="col-md-12">
@@ -40,21 +53,18 @@
                         Estoque Max
                     </th>
                     <th>
-                       Estoque Min
+                        Estoque Min
                     </th>
                     <th>
                         Preço Venda
                     </th>
                     <th>
-                       Preço Fábrica
+                        Preço Fábrica
                     </th>
                     <th>
-                        Imagem
+                        Data Cadastro
                     </th>
-                    <th>
-                       Data Cadastro
-                    </th>
-                    <th></th>
+                    <th>Operações</th>
                 </tr>
             </thead>
             <tbody>
@@ -62,7 +72,9 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.NomeAluminio)
+                            <div class="wrap">
+                                @Html.DisplayFor(modelItem => item.NomeAluminio)
+                            </div>
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Cor.NomeCor)
@@ -81,9 +93,6 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.PrecoFabrica)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Imagem)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.DataCadastro)
