--- a/Vidracaria_Portal/Views/Contatos/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Contatos/Edit.cshtml
@@ -5,59 +5,55 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="container">
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="CodigoContato" />
+                    <input type="hidden" asp-for="DataContato" />
+                    <input type="hidden" asp-for="DataRetorno" />
 
-<h4>ContatoModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CodigoContato" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="Nome" class="control-label"></label>
+                            <input asp-for="Nome" class="form-control" readonly=""/>
+                            <span asp-validation-for="Nome" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" readonly=""/>
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-6">
+                            <label asp-for="Assunto" class="control-label"></label>
+                            <input asp-for="Assunto" class="form-control" readonly=""/>
+                            <span asp-validation-for="Assunto" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label asp-for="Mensagem" class="control-label"></label>
+                            <input asp-for="Mensagem" class="form-control" readonly=""/>
+                            <span asp-validation-for="Mensagem" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div style="display: flex;">
+                        <div class="form-group col-md-12">
+                            <label asp-for="Retorno" class="control-label"></label>
+                            <textarea asp-for="Retorno" class="form-control"></textarea>
+                            <span asp-validation-for="Retorno" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group" style="margin-left: 16px;">
+                        <button type="submit" value="Save" class="btn btn-dark">Salvar</button>
+                        <a asp-action="Index" class="btn btn-danger">Voltar</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Assunto" class="control-label"></label>
-                <input asp-for="Assunto" class="form-control" />
-                <span asp-validation-for="Assunto" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Mensagem" class="control-label"></label>
-                <input asp-for="Mensagem" class="form-control" />
-                <span asp-validation-for="Mensagem" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Retorno" class="control-label"></label>
-                <input asp-for="Retorno" class="form-control" />
-                <span asp-validation-for="Retorno" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataContato" class="control-label"></label>
-                <input asp-for="DataContato" class="form-control" />
-                <span asp-validation-for="DataContato" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataRetorno" class="control-label"></label>
-                <input asp-for="DataRetorno" class="form-control" />
-                <span asp-validation-for="DataRetorno" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
