--- a/Vidracaria_Portal/Views/Home/Contato.cshtml
+++ b/Vidracaria_Portal/Views/Home/Contato.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidracaria_Portal.ViewModel.ContatoViewModel;
+﻿@model Vidracaria_Portal.ViewModel.HomeViewModel;
 
 @{ ViewData["title"] = "Contato";
     Layout = "~/Views/Shared/_LayoutCliente.cshtml"; }
@@ -72,7 +72,7 @@
                     <div class="btn btn-dark" style="cursor: pointer; margin-right: 8px;" onclick="onClick_AlternarEntreEnvios(1)"><i class="fas fa-mail-bulk"></i></div>
                     <div class="btn btn-danger" style="cursor: pointer" onclick="onClick_AlternarEntreEnvios(2)"><i class="fab fa-whatsapp"></i></div>
                 </div>
-                <form role="form" id="divEnvioDeEmail" asp-action="Contatos" method="post">
+                <form asp-action="Contatos" method="post" role="form" id="divEnvioDeEmail">
                     <div class="row">
                         <div class="col-md-6 form-group">
                             <label style="color: #343a40;" for="txtNome">Nome:</label>
@@ -85,11 +85,11 @@
                     </div>
                     <div class="form-group mt-3">
                         <label style="color: #343a40;" for="txtAssunto">Assunto:</label>
-                        <input class="form-control" asp-for="Contato.Assunto" id="txtAssunto" placeholder="Ex. Assunto" required>
+                        <input asp-for="Contato.Assunto" class="form-control" id="txtAssunto" placeholder="Ex. Assunto" required>
                     </div>
                     <div class="form-group mt-3">
                         <label style="color: #343a40;" for="txtMensagemEmail">Mensagem:</label>
-                        <textarea class="form-control" id="txtMensagemEmail" asp-for="Contato.Nome" rows="5" placeholder="Ex. Sua mensagem" required></textarea>
+                        <textarea class="form-control" id="txtMensagemEmail" asp-for="Contato.Mensagem" rows="5" placeholder="Ex. Sua mensagem" required></textarea>
                     </div>
                     <div class="text-center" style="margin-top: 20px;color: white;"><button class="btn btn-danger" type="submit">Enviar E-mail</button></div>
                 </form>
