--- a/Vidracaria_Portal/Views/Home/Home.cshtml
+++ b/Vidracaria_Portal/Views/Home/Home.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidracaria_Portal.ViewModel.ContatoViewModel;
+﻿@model Vidracaria_Portal.ViewModel.HomeViewModel;
 
 @{ ViewData["title"] = "Index";
     Layout = "~/Views/Shared/_LayoutCliente.cshtml"; }
@@ -53,6 +53,28 @@
             letter-spacing: 0.5px;
             font-size: 18px;
             margin-top: 8px;
+        }
+    </style>
+
+    <style>
+        .swal-text {
+            color: black;
+        }
+
+        .swal-title {
+            color: black;
+        }
+
+        .swal-button {
+            background-color: #00008B;
+        }
+
+            .swal-button:hover:active {
+                background-color: #00008B;
+            }
+
+        .swal-icon--success__ring {
+            border: 4px solid green;
         }
     </style>
 }
@@ -397,7 +419,7 @@
                         <div class="btn btn-dark" style="cursor: pointer; margin-right: 8px;" onclick="onClick_AlternarEntreEnvios(1)"><i class="fas fa-mail-bulk"></i></div>
                         <div class="btn btn-danger" style="cursor: pointer" onclick="onClick_AlternarEntreEnvios(2)"><i class="fab fa-whatsapp"></i></div>
                     </div>
-                    <form asp-action="Contatos" method="post" role="form" id="divEnvioDeEmail">
+                    <form asp-action="Contatos" id="divEnvioDeEmail">
                         <div class="row">
                             <div class="col-md-6 form-group">
                                 <label style="color: #343a40;" for="txtNome">Nome:</label>
@@ -436,7 +458,6 @@
 </main><!-- End #main -->
 
 <script type="text/javascript" src="~/javaScriptPages/Home.js"></script>
-
 @section Scripts{
-    <script></script>
+    
 }
