--- a/Vidracaria_Portal/Views/VidrosTemperados/Index.cshtml
+++ b/Vidracaria_Portal/Views/VidrosTemperados/Index.cshtml
@@ -6,6 +6,19 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
+@section Style{
+    <style>
+        .wrap {
+            text-overflow: ellipsis;
+            /* Required for text-overflow to do anything */
+            white-space: nowrap;
+            overflow: hidden;
+            width: 100px;
+            max-width: 100px;
+        }
+    </style>
+}
+
 <div class="content">
     <div class="row" style="margin-bottom: 15px; padding-left: 5px;">
         <div class="col-md-12">
@@ -57,7 +70,7 @@
                     <th>
                         Data Cadastro
                     </th>
-                    <th></th>
+                    <th>Operações</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,7 +78,9 @@
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.NomeVidro)
+                            <div class="wrap">
+                                @Html.DisplayFor(modelItem => item.NomeVidro)
+                            </div>
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Adesivo.Nome)
