--- a/Vidracaria_Portal/Views/Orcamentos/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Orcamentos/Edit.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_LayoutAdministrador.cshtml";
 }
 
+@section Styles{
+    <link href="~/lib/glightbox/css/glightbox.css" rel="stylesheet" />
+}
+
 <div class="container">
     <div class="content">
         <div class="row">
@@ -62,17 +66,19 @@
                     <div style="display: flex;">
                         <div class="form-group col-md-12">
                             <label asp-for="TipoId" class="control-label"></label>
-                            <input asp-for="TipoId" class="form-control" />
+                            <select asp-for="TipoId" class="form-control" asp-items="ViewBag.TipoId"></select>
                             <span asp-validation-for="TipoId" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group col-md-6">
-                        <label asp-for="Imagem" class="control-label"></label>
-                        <input type="hidden" asp-for="Imagem" /> <!-- Esconder -->
-                        <input type="file" id="NovaImagem" name="NovaImagem" class="form-control-file" accept=".jpg,.jpeg,.png" />
-                        <span asp-validation-for="Imagem" class="text-danger"></span>
-                        <img src="@( System.IO.File.Exists(ViewData["CaminhoImagem"] + "/" + Model.Imagem) ?
+                        <div class="form-group col-md-6">
+                            <label asp-for="Imagem" class="control-label"></label>
+                            <input type="hidden" asp-for="Imagem" /> <!-- Esconder -->
+                            <input type="file" id="NovaImagem" name="NovaImagem" class="form-control-file" accept=".jpg,.jpeg,.png" />
+                            <span asp-validation-for="Imagem" class="text-danger"></span>
+                            <img src="@( System.IO.File.Exists(ViewData["CaminhoImagem"] + "/" + Model.Imagem) ?
                     Url.Content("~/" + Model.Imagem) : Url.Content("/imagensSaves/sem_foto.png") )" class="img-fluid" id="PreviewImagem" />
+                        </div>
                     </div>
                     <div class="form-group">
                         <button type="submit" value="Save" class="btn btn-dark">Salvar</button>
