--- a/Vidracaria_Portal/Views/Aprovados/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Aprovados/Edit.cshtml
@@ -58,7 +58,8 @@
                     Url.Content("~/" + Model.Imagem) : Url.Content("/imagensSaves/sem_foto.png") )" class="img-fluid" id="PreviewImagem" />
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-primary" />
+                        <button type="submit" value="Save" class="btn btn-dark">Salvar</button>
+                        <a asp-action="Index" class="btn btn-danger">Voltar</a>
                     </div>
                 </form>
             </div>
