--- a/Vidracaria_Portal/Views/Aprovados/Index.cshtml
+++ b/Vidracaria_Portal/Views/Aprovados/Index.cshtml
@@ -23,10 +23,8 @@
     <div class="row" style="margin-bottom: 15px; padding-left: 5px;">
         <div class="col-md-12">
             <div class="col-md-6">
-                <a asp-action="Create" class="btn btn-outline-danger">Criar Novo</a>
-            </div>
-            <div class="col-md-6">
-                <form asp-controller="Aluminios" asp-action="Index" method="get" style="margin-top: 12px;">
+                <h4>Listagem dos orçamentos aprovados</h4>
+                <form asp-controller="Aprovados" asp-action="Index" method="get" style="margin-top: 12px;">
                     <input style=" border: 1px solid #00008B;" type="text" class="form-control" value="@ViewData["Filtro"]"
                            placeholder="Pesquisar" name="pesquisa" aria-label="" aria-describedby="basic-addon1" />
                     <div class="input-group-append" style="margin-top: 12px;">
