Campo Novo nos servicos

--- a/Vidracaria_Portal/Views/Aprovados/Edit.cshtml
+++ b/Vidracaria_Portal/Views/Aprovados/Edit.cshtml
@@ -38,15 +38,20 @@
                         </div>
                     </div>
                     <div style="display: flex;">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="Estado" class="control-label"></label>
                             <input asp-for="Estado" class="form-control" />
                             <span asp-validation-for="Estado" class="text-danger"></span>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="Celular" class="control-label"></label>
                             <input asp-for="Celular" class="form-control" />
                             <span asp-validation-for="Celular" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label asp-for="Valor" class="control-label"></label>
+                            <input asp-for="Valor" class="form-control" />
+                            <span asp-validation-for="Valor" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="form-group col-md-6">
