--- a/Vidracaria_Portal/Views/Concluidos/Index.cshtml
+++ b/Vidracaria_Portal/Views/Concluidos/Index.cshtml
@@ -53,6 +53,9 @@
                         Serviço
                     </th>
                     <th>
+                        Valor
+                    </th>
+                    <th>
                         Data Cadastro
                     </th>
                     <th>Operações</th>
@@ -61,43 +64,46 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            <div class="wrap">
-                                @Html.DisplayFor(modelItem => item.Nome)
-                            </div>
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Rua)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NumeroCasa)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Cidade)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Bairro)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Celular)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Telefone)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Estado)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TipoServico.Tipo)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.DataCadastro)
-                        </td>
-                        <td>
-                            <a asp-action="Delete" asp-route-id="@item.CodigoConcluido"><i class="fas fa-trash-alt"></i></a>
-                        </td>
-                    </tr>
+                <tr>
+                    <td>
+                        <div class="wrap">
+                            @Html.DisplayFor(modelItem => item.Nome)
+                        </div>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Rua)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumeroCasa)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cidade)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Bairro)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Celular)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Telefone)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Estado)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TipoServico.Tipo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Valor)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataCadastro)
+                    </td>
+                    <td>
+                        <a asp-action="Delete" asp-route-id="@item.CodigoConcluido"><i class="fas fa-trash-alt"></i></a>
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
