--- a/Vidracaria_Portal/Views/Orcamentos/Create.cshtml
+++ b/Vidracaria_Portal/Views/Orcamentos/Create.cshtml
@@ -46,15 +46,20 @@
                         </div>
                     </div>
                     <div style="display: flex;">
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="Rua" class="control-label"></label>
                             <input asp-for="Rua" class="form-control" />
                             <span asp-validation-for="Rua" class="text-danger"></span>
                         </div>
-                        <div class="form-group col-md-6">
+                        <div class="form-group col-md-4">
                             <label asp-for="NumeroCasa" class="control-label"></label>
                             <input asp-for="NumeroCasa" class="form-control" />
                             <span asp-validation-for="NumeroCasa" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label asp-for="Valor" class="control-label"></label>
+                            <input asp-for="Valor" class="form-control"/>
+                            <span asp-validation-for="Valor" class="text-danger"></span>
                         </div>
                     </div>
                     <div style="display: flex;">
